<resources>
    <string name="app_name">Banking Loan</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_camera">Capture</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_upload">Upload&#8230;</string>
    <string name="title_activity_custom_photo_gallery">CustomPhotoGalleryActivity</string>
    <string name="MKH">Mã Khách Hàng</string>
    <string name="MKH_hint">MKH&#8230;</string>
    <string name="Add">Mã Nhân Viên:</string>
    <string name="HoaDon">Số Hóa Đơn</string>
    <string name="Add_hint">MNV&#8230;</string>
    <string name="HoaDon_hint">số hóa đơn..</string>
    <string name="description">aa</string>
    <string name="addPhoto">Thêm Ảnh</string>
    <string name="upload">Upload</string>
    <string name="title_activity_loan_fragment">Loan</string>
    <string name="loan_type">Loan Type:</string>
    <string name="monthly_payment">Monthly Payment:</string>
    <string name="loan_amount">Loan Amount:</string>
    <string name="last_payment">Last Payment:</string>
    <string name="tenure">Tenure (Months):</string>
    <string name="loan_purpose">Loan Purpose:</string>
    <string name="max_interest">Max Interest (%):</string>
    <string name="select">Select</string>
    <string name="contact_details">Contact Details</string>
    <string name="reference_details">Reference Details</string>
    <string name="permanent_address">Permanent Address:</string>
    <string name="employment_details">Employment Details</string>
    <string name="income_details">Income Details</string>
    <string name="working_status">Working Status:</string>
    <string name="designation">Designation:</string>
    <string name="employer">Employer:</string>
    <string name="salary_income">Salary Income:</string>
    <string name="employer_address">Employer Address:</string>
    <string name="other_income">Other Income:</string>
    <string name="company_type">Company Type:</string>
    <string name="total_income">Total Income:</string>
    <string name="industry">Industry:</string>
    <string name="date_joined">Date Joined:</string>
    <string name="employer_contact">Employer Contact:</string>
    <string name="name">Name:</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="number_of_children">Number of Children:</string>
    <string name="identity_card_num">Identity Card Num.:</string>
    <string name="date_of_issue">Date of Issue:</string>
    <string name="education">Education:</string>
    <string name="gender">Gender:</string>
    <string name="marital_status">Marital Status:</string>
    <string name="reference_name">Reference Name:</string>
    <string name="current_same_as_permanent">Current same as permanent</string>
    <string name="relationship">Relationship:</string>
    <string name="telephone">Telephone:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="mobile">Mobile:</string>
    <string name="email">Email:</string>
    <string name="personal_information">Personal Information</string>
    <string name="dependents_infomation">Dependents Information</string>
    <string name="monthly_payment1">Monthly Payment</string>
    <string name="loan_details">Loan Details</string>
    <string name="homepage">Homepage</string>
    <string name="about">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="emailUs">Email</string>
    <string name="approved">Nearly there. Based on information provided you have been approved for the loan</string>
    <string name="loan_details_confirm">Loan Details</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="confirm_details_are_correct">All details are correct</string>
    <string name="i_accept">I accept</string>
    <string name="name_confirm">Name:</string>
    <string name="dob">DoB:</string>
    <string name="personal">Personnal</string>
    <string name="id">ID:</string>
    <string name="address">Address:</string>
    <string name="employment">Employment</string>
    <string name="full_terms_and_conditions">Full Terms and Conditions</string>
    <string name="please_share">Please share a few last details to complete your application…</string>
    <string name="please_wait">Please wait while we process your application. \nThis may take a few minutes…</string>
    <string name="NUMBER_YOU_VE_BEEN_RECEIVED">Please enter the number you\'ve been received..</string>
    <string name="street">Street...</string>
    <string name="city">City...</string>
    <string name="image">Image</string>
    <string name="refresh">Refresh</string>
    <string name="tezt">Công nghệ nhận dạng là một trong các công nghệ đang được áp dụng cho các thiết bị di động hiện nay. Nhận dạng có thể bao gồm nhận dạng âm thanh, hình ảnh. Các đối tượng nhận dạng có nhiều kiểu như tiếng nói, chữ viết, khuôn mặt, mã vạch … và biển báo giao thông cũng là một trong số đó. Chương trình nhận dạng biển báo giao thông thường phức tạp và được cài đặt trên những hệ thống có bộ xử lý lớn, camera chất lượng cao. Mục tiêu của khóa luận là cải tiến công nghệ nhận dạng này và mang nó cài đặt trên các thiết bị di động, giúp chúng ta phát hiện biển báo và nhận dạng nó một cách nhanh nhất.</string>
    <string name="set_permission">SET PERMISSION</string>
</resources>
