<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navHome"
            android:icon="@drawable/home"
            android:title="@string/homepage"/>

        <item
            android:id="@+id/navAbout"
            android:icon="@drawable/about"
            android:title="@string/about"/>

        <item
            android:id="@+id/navTel"
            android:icon="@drawable/phone"
            android:title="@string/contact_us"
            />

        <item
            android:id="@+id/navEmail"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/emailUs"/>
        <item
            android:id="@+id/navRefresh"
            android:icon="@drawable/nav_ref"
            android:title="@string/refresh" />
    </group>
</menu>