<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:background="@drawable/my_background"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="250dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/approved"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_amp_conditions"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:background="@drawable/my_background"
            >
            <chau.bankingloan.customThings.JustifyTextView
                android:textSize="18sp"
                android:lineSpacingExtra="5dp"
                android:text="@string/tezt"
                android:id="@+id/jtvConditionConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
        <CheckBox
            android:layout_gravity="center"
            android:id="@+id/cbAcceptConfirm"
            android:textSize="18sp"
            android:text="@string/i_accept"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:contentDescription="@string/image"
            android:layout_marginEnd="@dimen/fab_margin"
            android:id="@+id/imgBtnPreTab6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bi_left"/>

        <ImageButton
            android:contentDescription="@string/image"
            android:layout_marginStart="@dimen/fab_margin"
            android:id="@+id/imgBtnNextTab6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bi_right"/>
    </LinearLayout>
</LinearLayout>