<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/my_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:background="@drawable/my_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:gravity="end"
            android:textSize="18sp"
            android:text="Loan Details"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="end"
            android:text="Monthly Payment"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="end|center"
            android:text="@string/loan_type"/>

        <Spinner
            android:layout_gravity="center|end"
            android:id="@+id/spLoanType"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="end|center"
            android:text="@string/monthly_payment"/>

        <EditText
            android:text="3 623 545"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:id="@+id/edMonthlyPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="end|center"
            android:text="@string/loan_amount"/>

        <EditText
            android:textSize="22sp"
            android:textColor="@color/colorAccent"
            android:id="@+id/edLoanAmout"
            android:text="50 000 000"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:layout_weight="1"
            android:gravity="end|center"
            android:text="@string/last_payment"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:textStyle="normal"
            android:id="@+id/edLastPayment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="22sp"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="@string/tenure"/>

            <Spinner
                android:id="@+id/spTenure"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="end|center" />
        </LinearLayout>

        <EditText
            android:enabled="false"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="@string/loan_purpose"/>

            <Spinner
                android:id="@+id/spLoanPurpose"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_gravity="end|center"
                android:hint="@string/MKH_hint" />
        </LinearLayout>

        <EditText
            android:enabled="false"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="@string/max_interest"/>

            <EditText
                android:textSize="22sp"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:text="30%"
                android:id="@+id/edMaxInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <EditText
            android:enabled="false"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabLoanPre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_media_rew" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabLoanNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@android:drawable/ic_media_ff" />
    </LinearLayout>

</LinearLayout>
    </ScrollView>