<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/my_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:background="@drawable/my_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_weight="1"
                android:id="@+id/tvLoanDetails"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="end"
                android:textSize="18sp"
                android:text="Personal Information"/>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="end"
                android:text="Dependents Infomation"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="@string/name"/>

            <EditText
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:id="@+id/edName"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="@string/marital_status"/>

            <Spinner
                android:id="@+id/spMaritalStt"
                android:layout_gravity="center|end"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="@string/date_of_birth"/>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:textStyle="normal"
                android:id="@+id/tvBirthDay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="end|center"
                android:text="@string/number_of_children"/>

            <EditText
                android:imeOptions="flagNoExtractUi"
                android:id="@+id/edChildrenNum"
                android:textSize="18sp"
                android:textColor="@color/colorAccent"
                android:inputType="number"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="end|center"
                    android:text="@string/identity_card_num"/>

                <EditText
                    android:imeOptions="flagNoExtractUi"
                    android:id="@+id/edIdenCard"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent"
                    android:inputType="number"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>
            <EditText
                android:enabled="false"
                android:visibility="invisible"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="end|center"
                    android:text="@string/date_of_issue"/>

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:textStyle="normal"
                    android:id="@+id/tvDateOfIssue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="1"/>
            </LinearLayout>

            <EditText
                android:enabled="false"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="6"
                android:gravity="end|center"
                android:text="@string/education"/>

            <Spinner
                android:id="@+id/spEducation"
                android:layout_gravity="center|end"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5" />

            <EditText
                android:enabled="false"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:gravity="end|center"
                    android:text="@string/gender"/>

                <Spinner
                    android:id="@+id/spGender"
                    android:layout_gravity="center|end"
                    style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:enabled="false"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="bottom|end" >

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabPersonalPre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:src="@android:drawable/ic_media_rew" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabPersonalNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:src="@android:drawable/ic_media_ff" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>